# homepage

./: .gitignore  Dockerfile  Makefile  Procfile  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  roadmap.TODO
.github/workflows/: django.yml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_date.py  0003_maillist_post_preview_post_mail_list.py
blog/templates/blog/: main.html
deploy/: Caddyfile  docker-compose.yaml
homepage/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
homepage/homepage/: settings.py
main/: views.py
main/templates/main/: base.html  main.html
tests/: test_homepage.py
theme/static_src/: package-lock.json
theme/templates/: base.html
