[tool.poetry]
name = "homepage"
version = "0.1.0"
description = ""
authors = ["Yuriy Arhipov <yura@pragmatic.software>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4"
psycopg2-binary = "^2.9.2"
gunicorn = "^20.1.0"
pip = "^21.3.1"
pytest-django = "^4.5.2"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
